--- a/package.json
+++ b/package.json
@@ -9,21 +9,29 @@
     "postinstall": "fumadocs-mdx"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-presence": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "class-variance-authority": "^0.7.1",
+    "fumadocs-core": "15.6.5",
+    "fumadocs-mdx": "11.7.0",
+    "fumadocs-ui": "15.6.5",
+    "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.6.5",
-    "fumadocs-core": "15.6.5",
-    "fumadocs-mdx": "11.7.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/mdx": "^2.0.13",
     "@types/node": "24.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "typescript": "^5.8.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.11",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "postcss": "^8.5.6"
+    "typescript": "^5.8.3"
   }
 }
