--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "incremental": true,
     "paths": {
       "@/.source": ["./.source/index.ts"],
-      "@/*": ["./*"]
+      "@/*": ["./src/*"],
+      "@app/*": ["./app/*"],
+      "@root/*": ["./*"],
     },
     "plugins": [
       {
