--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-presence": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.9",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "fumadocs-core": "15.6.5",
